[package]
name = "lark-requests"
version = "0.1.0"
edition = "2021"

authors = ["Haiker Zhou <ni@renzhen.la>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xhaiker/lark"
homepage = "https://ihaiker.github.io/lark"
description = """
飞书开放平台Rust SDK请求部分实现。通过 `lark-requests` 可以方便的编写飞书开放平台的api.
"""
categories = ["network-programming", "io", "web-programming", "development-tools"]
keywords = ["lark", "feishu", "sdk", "request", "http", "client", "api"]


[features]
default = []
full = ["blocking"]

blocking = ["reqwest/blocking"]

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
regex = "1.7.3"
reqwest = { version = "0.11.16" }
serde = { version = "1.0.159", features = ["derive", "serde_derive"] }
serde_json = "1.0.95"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros"] }
